--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -53,6 +53,9 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <form method="POST" action="/urls/<%= id %>/delete">
+                <button type="submit" class="btn btn-danger">Delete</button>
+              </form>
             </tr>
           <% } %>
         </tbody>
