--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -46,6 +46,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -53,9 +55,16 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <form method="POST" action="/urls/<%= id %>/delete">
-                <button type="submit" class="btn btn-danger">Delete</button>
+              <td>
+                <form method="get" action="/urls/<%= id %>/edit">
+                <button type="submit" class="btn btn-warning">Edit</button>
               </form>
+              </td> 
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+              </td>  
             </tr>
           <% } %>
         </tbody>
