--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,7 +8,7 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - TinyApp Example</title>
+    <title>URL - TinyApp </title>
   </head>
 
   <body>
@@ -42,7 +42,20 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+      <div class="card-footer text-muted">
+        <h2><b>Edit</b></h2>
+          <form class="form-inline" action="/urls/<%= id %>" method="get" style="justify-content:center">
+            <label for="longURL">New URL:</label>
+            <input
+              class="form-control"
+              type="text"
+              name="longURL"
+              placeholder="<%= longURL %>"
+              style="width: 300px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script
