--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <title>New URL - TinyApp Example</title>
+    <title>New URL - TinyApp </title>
   </head>
 
   <body>
