--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -10,54 +9,35 @@
     />
     <title>URL - TinyApp </title>
   </head>
-
   <body>
-    <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
-    <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      </div>
-    </div>
-  </nav>
-</header>
+    <%- include('./partials/_header'); %>
+
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= url.longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
-        </p>
+          Short url:
+          <a target="_blank" href="/u/<%= shortURL %>"><%= shortURL %></a>
       </div>
       <div class="card-footer text-muted">
-        <h2><b>Edit</b></h2>
-          <form class="form-inline" action="/urls/<%= id %>" method="get" style="justify-content:center">
-            <label for="longURL">New URL:</label>
-            <input
-              class="form-control"
-              type="text"
-              name="longURL"
-              placeholder="<%= longURL %>"
-              style="width: 300px; margin: 1em"
-            />
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+        <form
+          class="form-inline justify-content-center"
+          action="/urls/<%=shortURL%>?_method=PUT"
+          method="POST"
+        >
+          <label for="longURL">New URL</label>
+          <input
+            class="form-control"
+            type="text"
+            placeholder="http://"
+            name="longURL"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Update</button>
+        </form>
       </div>
     </div>
-    <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
